0.21.2 - in development
-----------------------
Maintenance release.

 * qbrowse:
   * Does not crash anymore when called for shared repository.
     (André Bachmann, Alexander Belchenko, Bug #578935)
 * qconfig:
   * Fixed Set Default button in Merge tab. (Gordon Tyler, Bug #820635)
 * qlog:
   * Show context menu properly after re-load of branch(es).
     (IWATA Hidetaka, Bug #744904)


0.21.1 - 2011/08/04
-------------------
Maintenance release.

 * qlog:
   * Do not crash on ghost revisions. (Jonathan Riddell, Bug #785967)
 * qswitch:
   * Support unicode locations. (Alexander Belchenko, Bug #819259)


0.21 "Tilia" - 2011/07/21
-------------------------
What's new in this release:

QBzr 0.21 is companion release for bzr 2.4, and compatible with bzr 2.3.
New features in this release:

Now you can select changes to shelve and unshelve your saved changes with
new shiny qshelve and qunshelve dialogs.

qdiff window has been reworked and all controls moved to a toolbar, similar to
one in qannotate window. Also qdiff toolbar provides you new functions: text
search within active pane and also knob to ignore whitespace changes (it's 
also available as command-line option).

User can configure the tab width and this setting affects qdiff, qannotate and
qcat windows. By default tab width equals to 8 characters, user can set new
default value in bazaar.conf as ``tab_width = N`` (either via qconfig or
editing [DEFAULT] section of bazaar.conf). Also user can set individual tab
width for branches in their branch.conf. User can configure tab width via
"View Options" menu in toolbars of qdiff, qannotate.

QBzr provides support for new builtin feature of bzr: mergetools. Now you can
easier configure your favorite diff/merge tool to be used from qconflicts or
context menu in qbrowse (Working Tree browser in Bazaar Explorer).

If you have python-gpgme installed and you have enabled gpg-signatures for
your commits then you can see new messages regarding valid gpg-signatures